[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/UI/CountDown/CountDown.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/PixelOperatorMonoHB.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/SFX/Sounds/countdown_tick.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/Sounds/countdown_finish.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 512
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "countdown"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 384, -186 ), Vector2( 512, 104 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}

[node name="CountDown" type="Label"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.316
margin_top = -258.981
margin_right = 126.781
margin_bottom = 253.019
rect_scale = Vector2( 1.01028, 1.01028 )
custom_fonts/font = SubResource( 1 )
text = "3"
align = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interval" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/countdown = SubResource( 2 )

[node name="TickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="FinishSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Interval" to="." method="_on_Interval_timeout"]
